# architecture-bionicpro

./: docker-compose.yaml
api/: Dockerfile  config.yaml  static_config.yaml
api/src/: CMakeLists.txt  auth_check_middleware.hpp  cors_middleware.hpp  key_cloack_auth.hpp  main.cpp  reports_handler.hpp
frontend/src/: App.tsx
keycloak/: realm-export.json
